Work on the data mgr ui